--- a/templates/layoutBase.html.j2
+++ b/templates/layoutBase.html.j2
@@ -20,11 +20,12 @@
         <!--Sidebar-->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./">
+                <div class="sidebar-brand-icon">
+                    <!--<i class="fas fa-laugh-wink"></i>-->
+                    <img src='https://www.psuconnect.in/sdsdsd/download10.jpg' width="50" height="50"/>
                 </div>
-                <div class="sidebar-brand-text mx-3">Dashboard</div>
+                <div class="sidebar-brand-text mx-3">MIS Dashboard</div>
             </a>
 
             <!-- Divider -->
@@ -79,5 +80,6 @@
             document.getElementById("sidebarToggle").click();
         })();
     </script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
