--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -7,3 +7,10 @@
         </a>
     </li>
 {% endif %}
+<!-- Nav Item - Dashboard -->
+<li class="nav-item">
+    <a class="nav-link" href='./createRawOutages'>
+        <i class="fas fa-th-large"></i>
+        <span>Raw Outages</span>
+    </a>
+</li>
