response decoration done

--- a/templates/layoutBase.html.j2
+++ b/templates/layoutBase.html.j2
@@ -80,6 +80,7 @@
             document.getElementById("sidebarToggle").click();
         })();
     </script>
+    <link href="{{ url_for('static', filename='site.css') }}" rel="stylesheet" type="text/css"/>
     {% block scripts %}{% endblock %}
 </body>
 </html>
