--- a/templates/createRawOutages.html.j2
+++ b/templates/createRawOutages.html.j2
@@ -8,8 +8,8 @@
 {% block content %}
 <h1>Create Outages in Raw data store</h1>
 <div class="row align-content-center">
-    <input id="startDate" class="form-inline bg-light border-1" type="date" />
-    <input id="endDate" class="form-inline bg-light border-1" type="date" />
+    <input id="startDate" class="form-inline bg-light border-1 mr-2" type="date" />
+    <input id="endDate" class="form-inline bg-light border-1 mr-3" type="date" />
     <button id="createRawOutagesBtn" class="btn btn-success btn-icon-split">
         <span class="icon text-white-50">
             <i class="fas fa-sync"></i>
@@ -17,6 +17,8 @@
         <span class="text">Create Data</span>
     </button>
 </div>
+<div id='respDiv' class="row align-content-center mt-3"></div>
+
 {% endblock %}
 
 {% block scripts %}
