raw pair angles service integration done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -14,3 +14,9 @@
         <span>Raw Outages</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createRawPairAngles'>
+        <i class="fas fa-th-large"></i>
+        <span>Raw PairAngles</span>
+    </a>
+</li>
