--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -20,3 +20,9 @@
         <span>Raw PairAngles</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createRawFreq'>
+        <i class="fas fa-th-large"></i>
+        <span>Raw Frequency</span>
+    </a>
+</li>
