create raw voltage ui done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -26,3 +26,9 @@
         <span>Raw Frequency</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createRawVolt'>
+        <i class="fas fa-th-large"></i>
+        <span>Raw Voltage</span>
+    </a>
+</li>
