derived freq creation ui done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -32,3 +32,9 @@
         <span>Raw Voltage</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createDerFreq'>
+        <i class="fas fa-th-large"></i>
+        <span>Derived Frequency</span>
+    </a>
+</li>
