--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -38,3 +38,9 @@
         <span>Derived Frequency</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createDerVolt'>
+        <i class="fas fa-th-large"></i>
+        <span>Derived Voltage</span>
+    </a>
+</li>
