derived weekly vdi creation UI done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -44,3 +44,9 @@
         <span>Derived Voltage</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createDerVdi'>
+        <i class="fas fa-th-large"></i>
+        <span>Derived VDI</span>
+    </a>
+</li>
