dev or prod mode config with waitress setup done

--- a/templates/layoutBase.html.j2
+++ b/templates/layoutBase.html.j2
@@ -65,7 +65,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright © Flask App 2020</span>
+                        <span>Copyright © MIS Dashboard 2020</span>
                     </div>
                 </div>
             </footer>
