violation messages upload ui done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -50,3 +50,9 @@
         <span>Derived VDI</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createIegcViolMsgs'>
+        <i class="fas fa-th-large"></i>
+        <span>IEGC Violation Msgs</span>
+    </a>
+</li>
