added ui for all system constraints services interaction

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -56,3 +56,27 @@
         <span>IEGC Violation Msgs</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='./createTransmissionConstraints'>
+        <i class="fas fa-th-large"></i>
+        <span>Raw Transmission Constraints</span>
+    </a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href='./createIctConstraints'>
+        <i class="fas fa-th-large"></i>
+        <span>Raw Ict Constraints</span>
+    </a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href='./createHighVoltageNode'>
+        <i class="fas fa-th-large"></i>
+        <span>High Voltage Data</span>
+    </a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href='./createLowVoltageNode'>
+        <i class="fas fa-th-large"></i>
+        <span>Low Voltage Data</span>
+    </a>
+</li>
