using blueprints to split route handlers and minor template bug fix

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -9,73 +9,73 @@
 {% endif %}
 <!-- Nav Item - Dashboard -->
 <li class="nav-item">
-    <a class="nav-link" href='./createRawOutages'>
+    <a class="nav-link" href='/createRawOutages'>
         <i class="fas fa-th-large"></i>
         <span>Raw Outages</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createRawPairAngles'>
+    <a class="nav-link" href='/createRawPairAngles'>
         <i class="fas fa-th-large"></i>
         <span>Raw PairAngles</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createRawFreq'>
+    <a class="nav-link" href='/createRawFreq'>
         <i class="fas fa-th-large"></i>
         <span>Raw Frequency</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createRawVolt'>
+    <a class="nav-link" href='/createRawVolt'>
         <i class="fas fa-th-large"></i>
         <span>Raw Voltage</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createDerFreq'>
+    <a class="nav-link" href='/createDerFreq'>
         <i class="fas fa-th-large"></i>
         <span>Derived Frequency</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createDerVolt'>
+    <a class="nav-link" href='/createDerVolt'>
         <i class="fas fa-th-large"></i>
         <span>Derived Voltage</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createDerVdi'>
+    <a class="nav-link" href='/createDerVdi'>
         <i class="fas fa-th-large"></i>
         <span>Derived VDI</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createIegcViolMsgs'>
+    <a class="nav-link" href='/createIegcViolMsgs'>
         <i class="fas fa-th-large"></i>
         <span>IEGC Violation Msgs</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createTransmissionConstraints'>
+    <a class="nav-link" href='/createTransmissionConstraints'>
         <i class="fas fa-th-large"></i>
         <span>Raw Transmission Constraints</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createIctConstraints'>
+    <a class="nav-link" href='/createIctConstraints'>
         <i class="fas fa-th-large"></i>
         <span>Raw Ict Constraints</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createHighVoltageNode'>
+    <a class="nav-link" href='/createHighVoltageNode'>
         <i class="fas fa-th-large"></i>
         <span>High Voltage Data</span>
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='./createLowVoltageNode'>
+    <a class="nav-link" href='/createLowVoltageNode'>
         <i class="fas fa-th-large"></i>
         <span>Low Voltage Data</span>
     </a>
