weekly report generation done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -80,3 +80,9 @@
         <span>Low Voltage Data</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='/createWeeklyReport'>
+        <i class="fas fa-th-large"></i>
+        <span>Create Weekly Report</span>
+    </a>
+</li>
