reports listing page donw

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -81,8 +81,14 @@
     </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href='/createWeeklyReport'>
+    <a class="nav-link" href='/weeklyReports/create'>
         <i class="fas fa-th-large"></i>
         <span>Create Weekly Report</span>
+    </a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href='/weeklyReports/list'>
+        <i class="fas fa-th-large"></i>
+        <span>Show Weekly Reports</span>
     </a>
 </li>
