--- a/templates/createWeeklyReport.html.j2
+++ b/templates/createWeeklyReport.html.j2
@@ -19,6 +19,8 @@
 </div>
 <div id='respDiv' class="row align-content-center mt-3"></div>
 
+<br/>
+<a class="link" href='/weeklyReports/list'>Show Weekly Reports</a>
 {% endblock %}
 
 {% block scripts %}
