--- a/templates/showDirectory.html.j2
+++ b/templates/showDirectory.html.j2
@@ -1,12 +1,12 @@
 {% extends "layoutBase.html.j2" %}
-{% block title %}Home{% endblock %}
+{% block title %}{{data['title']}}{% endblock %}
 
 {% block head %}
 {{ super() }}
 {% endblock %}
 
 {% block content %}
-<h1>Weekly Reports</h1>
+<h1>{{data['heading']}}</h1>
 <table class='table table-bordered table-hover display w-auto' id='filesTable'>
     <thead>
         <tr>
@@ -16,7 +16,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for fileObj in files %}
+        {% for fileObj in data['files'] %}
         <tr>
             <td>
                 <a href="{{ (request.path + '/' if request.path != '/' else '') + fileObj['name'] }}">
