derived freq display done with blueprints

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -92,3 +92,9 @@
         <span>Show Weekly Reports</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='/derivedFreq'>
+        <i class="fas fa-th-large"></i>
+        <span>Display Daily Frequency</span>
+    </a>
+</li>
