--- a/templates/displayDerivedFreq.html.j2
+++ b/templates/displayDerivedFreq.html.j2
@@ -8,7 +8,7 @@
 {% block content %}
 <h1>Display Frequency Profile</h1>
 <div class="row align-content-center">
-    <form class="form-inline" action="/displayDerivedFrequency" method="POST">
+    <form class="form-inline" method="POST">
         <input name="startDate" id="startDate" class="form-inline bg-light border-1 mr-2" type="date" />
         <input name ="endDate" id="endDate" class="form-inline bg-light border-1 mr-3" type="date" />
         <button id="displayDerFreqBtn" class="btn btn-success btn-icon-split">
@@ -20,61 +20,47 @@
     </form>
 </div>
 {% if method == 'POST' %}
-{% if resp.isSuccess %}
-<div id='resDiv' class=" mt-3">
-    <table id="derivedFrequency" class="table table-bordered table-hover display w-auto" style="width:100%">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Maximum Inst.</th>
-                <th>Minimum Inst.</th>
-                <th>Average</th>
-                <th>Less Than 49.9</th>
-                <th>Between 49.9 And 50.05</th>
-                <th>Greater Than 50.05</th>
-                <th>Percentage of Time Frequency Remained outside IEGC Band</th>
-                <th>No’s of hours frequency remained outside IEGC Band</th> 
-                <th>FDI</th>
-                {# <th>Cummulative FDI</th> #}
-            </tr>
-        </thead>    
-        <tbody>
-            {% for row in resp.message.rows %}
-            <tr>
-                <td>{{row.date}}</td>
-                <td>{{row.max}}</td>
-                <td>{{row.min}}</td>
-                <td>{{row.avg}}</td>
-                <td>{{row.less}}</td>
-                <td>{{row.bw}}</td>
-                <td>{{row.great}}</td>
-                <td>{{row.out}}</td>
-                <td>{{row.outHrs}}</td>
-                <td>{{row.fdi}}</td>
-            </tr>
-            {% endfor %}
-            
-        </tbody>
-        <tfoot>
-           <tr>
-           <td> </td>
-           <td> </td>
-           <td> </td>
-           <td> </td>
-           <td> </td>
-           <td> </td>
-           <td> {{"Cummulative FDI = " +resp.message.weeklyFDI}}</td>
-           <td> </td>
-           <td> </td>
-           <td> </td>
-           </tr>
-        </tfoot>
-    </table>
-
+{% if data.isSuccess %}
+<div class="h5 mt-3">
+{{"Cummulative FDI = " +("%.2f"|format(data.data.weeklyFDI))}}
 </div>
+<table id="derivedFrequency" class="table table-bordered table-hover display w-auto">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>Maximum Inst.</th>
+            <th>Minimum Inst.</th>
+            <th>Average</th>
+            <th>Less Than 49.9</th>
+            <th>Between 49.9 and 50.05</th>
+            <th>Greater Than 50.05</th>
+            <th>% of Time Freq. remained outside IEGC Band</th>
+            <th>Num of hrs Freq. remained outside IEGC Band</th> 
+            <th>FDI</th>
+            {# <th>Cummulative FDI</th> #}
+        </tr>
+    </thead>    
+    <tbody>
+        {% for row in data.data.rows %}
+        <tr>
+            <td>{{row.date}}</td>
+            <td>{{"%.2f"|format(row.max)}}</td>
+            <td>{{"%.2f"|format(row.min)}}</td>
+            <td>{{"%.2f"|format(row.avg)}}</td>
+            <td>{{"%.2f"|format(row.less)}}</td>
+            <td>{{"%.2f"|format(row.bw)}}</td>
+            <td>{{"%.2f"|format(row.great)}}</td>
+            <td>{{"%.2f"|format(row.out)}}</td>
+            <td>{{"%.2f"|format(row.outHrs)}}</td>
+            <td>{{"%.2f"|format(row.fdi)}}</td>
+        </tr>
+        {% endfor %}
+        
+    </tbody>
+</table>
 {% else %}
 <div class="alert alert-danger mt-5" >
-  <strong>Something went wrong</strong> Frequency Profile Display Unsuccessfull
+  <strong>Something went wrong</strong> Frequency Profile Display Unsuccessful
 </div>
 {% endif %}
 {% endif %}
@@ -90,7 +76,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='node_modules/datatables.net-buttons/js/buttons.print.min.js') }}"></script>
     <script>
         $(document).ready(function() {
-        $('#derivedFrequency').DataTable();
-        } );
+            $('#derivedFrequency').DataTable();
+        });
     </script>
 {% endblock %}
