--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -98,3 +98,9 @@
         <span>Display Daily Frequency</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='/iegcViolMsgs'>
+        <i class="fas fa-th-large"></i>
+        <span>Display IEGC Viol. Msgs</span>
+    </a>
+</li>
