trans and major Gen Outages fetch done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -104,3 +104,15 @@
         <span>Display IEGC Viol. Msgs</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='/transOutages'>
+        <i class="fas fa-th-large"></i>
+        <span>Display Trans. El. Outages</span>
+    </a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href='/majorGenOutages'>
+        <i class="fas fa-th-large"></i>
+        <span>Display Major Gen. Outages</span>
+    </a>
+</li>
