--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -116,3 +116,9 @@
         <span>Display Major Gen. Outages</span>
     </a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href='/longUnrevForcedOutages'>
+        <i class="fas fa-th-large"></i>
+        <span>Display Long Time Unrev. Forced Outages</span>
+    </a>
+</li>
