view raw outages done

--- a/templates/_authorizedPartial.html.j2
+++ b/templates/_authorizedPartial.html.j2
@@ -105,6 +105,12 @@
     </a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href='/outages'>
+        <i class="fas fa-th-large"></i>
+        <span>Display Outages</span>
+    </a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href='/transOutages'>
         <i class="fas fa-th-large"></i>
         <span>Display Trans. El. Outages</span>
