--- a/templates/displayOutages.html.j2
+++ b/templates/displayOutages.html.j2
@@ -1,19 +1,19 @@
 {% extends "layoutBase.html.j2" %}
-{% block title %}Transmission Element Outages{% endblock %}
+{% block title %}Element Outages{% endblock %}
 
 {% block head %}
 {{ super() }}
 {% endblock %}
 
 {% block content %}
-<h1>Display Transmission Element Outages</h1>
+<h1>Display Element Outages</h1>
 <div class="row align-content-center">
     <form class="form-inline" method="POST">
         <label for="startDate">Start Date</label>
         <input name="startDate" class="form-inline bg-light border-1 mr-2" type="date" />
         <label for="endDate">End Date</label>
         <input name="endDate" class="form-inline bg-light border-1 mr-3" type="date" />
-        <button id="fetchTransOutagesBtn" class="btn btn-success btn-icon-split">
+        <button id="fetchOutagesBtn" class="btn btn-success btn-icon-split">
             <span class="icon text-white-50">
                 <i class="fas fa-sync"></i>
             </span>
@@ -29,7 +29,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Owners</th>
-                    <th>Volt. Level</th>
+                    <th>Volt. Level/Capacity</th>
                     <th>Ouatge Date</th>
                     <th>Ouatge Time</th>
                     <th>Revival Date</th>
@@ -57,7 +57,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Owners</th>
-                    <th>Volt. Level</th>
+                    <th>Volt. Level/Capacity</th>
                     <th>Ouatge Date</th>
                     <th>Ouatge Time</th>
                     <th>Revival Date</th>
